# rat-template-project

./: .gitignore  CMakeLists.txt  README.md  solenoid.cpp
.devcontainer/: devcontainer.json
cmake/modules/: FindDistMesh.cmake  FindRatCommon.cmake  FindRatMLFMM.cmake  FindRatModels.cmake
include/: conductorcustom.hh
models/: CMakeLists.txt  solenoid.cpp
src/: CMakeLists.txt  conductorcustom.cpp  main.cpp
